<resources>
    <string name="app_name">CodeReader</string>
    <string name="cancel">Cancel</string>
    <string name="navigate_back">Navigate back</string>
    <string name="app_info">App info</string>

    <string name="dialog_title_permission">Please allow permission</string>
    <string name="dialog_message_camera_permission">Couldn\'t access to camera.\nPlease allow permission from \"App Info\", to code scan</string>
    <string name="dialog_title_select_action">Select action</string>

    <string name="toast_permission_required">Camera permissions are required. If you do not give permission, this app will not work.</string>
    <string name="toast_copy_to_clipboard">Copy to clipboard</string>

    <string name="options_menu_license">Open source licenses</string>
    <string name="options_menu_source_code">Source code</string>
    <string name="options_menu_privacy_policy">Privacy policy</string>
    <string name="options_menu_play_store">Google Play store</string>
    <string name="options_menu_share_this_app">Share this app</string>
    <string name="options_menu_settings">Settings</string>

    <string name="scanning">Scanning…</string>
    <string name="label_format">format:</string>
    <string name="label_type">type:</string>

    <string name="action_copy">copy</string>
    <string name="action_share">share</string>
    <string name="action_open">open</string>

    <string name="preference_category_settings">Settings</string>
    <string name="preference_title_vibration">Vibration</string>
    <string name="preference_summary_vibration_on">Vibrate when code is detected</string>
    <string name="preference_summary_vibration_off">Does not vibrate when code is detected</string>

    <string name="preference_category_information">Information</string>
    <string name="preference_title_version">Version</string>

    <string name="action_options_menu">Options menu</string>
    <string name="action_turn_flash_on">Turn flashlight on</string>
    <string name="action_turn_flash_off">Turn flashlight off</string>
</resources>
